# briefchain

./: .env.example  .gitignore  AGENTS.md  CODING_GUIDELINES.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 14ea53d237a7_init_brief_models.py  20045ec299dd_add_modified_by_name_to_brief_versions.py  42cbe8db781c_add_brief_invites_and_drop_email_tokens.py  6a50f0011492_add_brief_type_to_briefs_and_versions.py  9dd38140350e_add_task_queue_and_extend_brief_arbiter_.py  a23a9807994f_add_task_and_kanban_models.py  ad5d4d5da06c_add_user_models.py  b780f9fe0bcd_update_brief_dual_state_and_redundant_.py  cbaeb6ae983a_add_status_changed_by_name_to_briefs.py  e6bb32828cd4_rename_brief_version_status_sent_to_.py
docs/mvp_design/: 00-overview.md  01-brief-feedback-design.md  02-user-design.md  03-api-design.md  04-frontend-prototype.html  05-invite-link-design.md  06-task-kanban-design.md  07-task-kanban-api-design.md  08-fe-pages-design.md  09-fe-kanban-design.md  10-arbiter-queue-design.md  11-arbiter-worker-design.md  12-arbiter-review-api-design.md
src/briefchain/: __init__.py  database.py
tests/: conftest.py  test_api_auth.py  test_api_briefs.py  test_api_invites.py  test_api_users.py  test_brief_models.py  test_invite_service.py  test_storage.py  test_user_models.py
tests/api/: test_reviews.py
tests/arbiter/: test_queue.py  test_skills.py  test_worker.py
web/: .env.example  middleware.ts  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: AppShell.tsx  BriefActions.tsx  (+16 more)
(+217 files in other folders)
