[project]
name = "briefchain"
version = "0.1.0"
description = "AI-reviewed briefs for smoother handoffs"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    "uvicorn>=0.32.0",
    "google-adk>=2.4.0",
    "openai>=2.45.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/briefchain"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]
